Fixup broken mobile rendering of python docs (kill horizontal overflows)
- On mobile, break per-character on text in `dt` and `dl` blocks
- On mobile, set body overflow-x to hidden, in order to limit side-effects
  of some weirdly behaving components in python docs

--- a/design/css/base.css
+++ b/design/css/base.css
@@ -8,6 +8,13 @@ body {
   overflow-y: auto;
   /* overflow:auto; */
 }
+
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
 /*
 ul::-webkit-scrollbar {
   width: 0;
